--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.24.0",
+    "enzyme": "^3.11.0",
     "history": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5"
   }
 }
